package sample.classes.sql_clients;

public class Configs
{
    protected String dbHost = "127.0.0.1";
    protected String dbPort = "3306";
    protected String dbUser = "root";
    protected String dbPass = "1111";
    protected String dbName = "check_editor";
}
