package sample.classes.sql_clients;

public class Const
{
    public static final String USER_TABLE = "users";
    public static final String USERS_ID = "idusers";
    public static final String USERS_FIRSTNAME = "first_name";
    public static final String USERS_SECONDNAME = "second_name";
    public static final String USERS_THIRDNAME = "third_name";
    public static final String USERS_EMAIL = "email";
    public static final String USERS_PASSWORD = "password";

    public static final String CHECK_TABLE = "check";
    public static final String CHECK_NUMBER = "number";
    public static final String CHECK_NAME = "name";
    public static final String CHECK_PRICE = "price";
    public static final String CHECK_SHOP_NAME = "shop_name";
    public static final String CHECK_DATE = "date";
    public static final String CHECK_NOTE = "note";
    public static final String CHECK_PHOTO = "photo";
    public static final String CHECK_EMAIL = "email";
}
