@startuml



title __CHECK_EDITOR's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Controller_add {
    }
  }
  

  namespace sample {
    class sample.Controller_database {
    }
  }
  

  namespace sample {
    class sample.Controller_image {
    }
  }
  

  namespace sample {
    class sample.Controller_open {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    namespace classes.other {
      class sample.classes.other.Check {
      }
    }
  }
  

  namespace sample {
    namespace classes.other {
      class sample.classes.other.Check_edit {
      }
    }
  }
  

  namespace sample {
    namespace classes.other {
      class sample.classes.other.User {
      }
    }
  }
  

  namespace sample {
    namespace classes.sql_clients {
      class sample.classes.sql_clients.Configs {
      }
    }
  }
  

  namespace sample {
    namespace classes.sql_clients {
      class sample.classes.sql_clients.Const {
      }
    }
  }
  

  namespace sample {
    namespace classes.sql_clients {
      class sample.classes.sql_clients.DatabaseHandler {
      }
    }
  }
  

  sample.Main -up-|> javafx.application.Application
  sample.classes.other.Check .up.|> java.io.Serializable
  sample.classes.other.Check_edit .up.|> java.io.Serializable
  sample.classes.sql_clients.DatabaseHandler -up-|> sample.classes.sql_clients.Configs


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
